add onboarding with juno

--- a/src/NFTonBase_frontend/index.html
+++ b/src/NFTonBase_frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval' 'unsafe-inline' *; worker-src 'self' blob: *;">
     <!-- <meta http-equiv="Content-Security-Policy" content="script-src *;"> -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src * data: 'unsafe-eval' 'unsafe-inline' blob:;script-src 'self' 'unsafe-inline' 'unsafe-eval' http://avqkn-guaaa-aaaaa-qaaea-cai.localhost:4943; worker-src 'self' blob:http://xxxx; img-src 'self' blob: data:;"> -->
