--- a/src/NFTonBase_frontend/index.html
+++ b/src/NFTonBase_frontend/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/icon-512x512.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval' 'unsafe-inline' *; worker-src 'self' blob: *;">
     <!-- <meta http-equiv="Content-Security-Policy" content="script-src *;"> -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src * data: 'unsafe-eval' 'unsafe-inline' blob:;script-src 'self' 'unsafe-inline' 'unsafe-eval' http://avqkn-guaaa-aaaaa-qaaea-cai.localhost:4943; worker-src 'self' blob:http://xxxx; img-src 'self' blob: data:;"> -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://avqkn-guaaa-aaaaa-qaaea-cai.localhost:4943"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Gate 23</title>
   </head>
   <body>
     <div id="app"></div>
